@@ -1,4 +1,4 @@
-Copyright (C) 2009, 2010 Peter Breitenlohner <tex-live@tug.org>
+Copyright (C) 2009 - 2011 Peter Breitenlohner <tex-live@tug.org>
 You may freely use, modify and/or distribute this file.
 
 	Configure options for the  TeX Live (TL) build system
@@ -120,7 +120,7 @@ use this option, but distro builds should specify this as, e.g.,
 
 2.3.1. --with-editor=CMD
 Specify the command CMD to invoke from the `e' option, replacing the default
-`vi +%d %s'.
+`vi +%d '%s'' for Unix or `texworks --position=%d "%s"' for Windows..
 
 2.3.3. --enable-auto-core
 This option causes TeX & MF to produce a core dump when a particular
@@ -134,7 +134,8 @@ on little-endian architectures).
 If enabled (by default) allow TeX's '--ipc' option.
 
 2.3.6. --disable-tex, --enable-etex, --disable-aleph, --disable-pdftex,
-       --disable-luatex, --disable-xetex, --disable-mf, --disable-mp
+       --disable-luatex, --disable-xetex, --disable-ptex, --disable-eptex,
+       --disable-mf, --disable-mp
 Do or do not build the various TeX, METAFONT, and MetaPost engines.
 
 2.3.7. --with-mf-x-toolkit
